--- a/exercise-D10.html
+++ b/exercise-D10.html
@@ -63,7 +63,20 @@
                     <td>++++++++</td>
                 </tr>
             </table>
-            
+            <br>
+            <hr>
+            <br>
+            <div>
+                <p>Facts</p>
+                <ul>
+                    <li>Fact1</li>
+                    <li>Fact2</li>
+                    <li>Fact3</li>
+                    <li>Fact4</li>
+                    <li>Fact5</li>
+                </ul>
+            </div>
+            >
         </div>
     </div>
     
